--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -181,6 +181,14 @@
   --#{$table}__compound-expansion-toggle__button--Color: var(--pf-t--global--icon--color--brand--default);
   --#{$table}__compound-expansion-toggle__button--hover--Color: var(--pf-t--global--icon--color--brand--hover);
 
+  // ::before border treatment
+  --#{$table}__compound-expansion-toggle__button--before--border-width--base: var(--pf-t--global--border--width--button--default);
+  --#{$table}__compound-expansion-toggle__button--before--BorderColor: var(--pf-t--global--border--color--default);
+  --#{$table}__compound-expansion-toggle__button--before--BorderRightWidth: 0;
+  --#{$table}__compound-expansion-toggle__button--before--BorderLeftWidth: 0;
+  --#{$table}__compound-expansion-toggle__button--before--Bottom: calc(var(--#{$table}__compound-expansion-toggle__button--before--border-width--base) * -1);
+  --#{$table}__compound-expansion-toggle__button--before--Left: calc(var(--#{$table}__compound-expansion-toggle__button--before--border-width--base) * -1);
+
   // ::after border treatment
   --#{$table}__compound-expansion-toggle__button--after--border-width--base: var(--pf-t--global--border--width--strong);
   --#{$table}__compound-expansion-toggle__button--after--BorderColor: var(--pf-t--global--border--color--clicked);
@@ -205,7 +213,6 @@
   --#{$table}__tr--m-clickable--BackgroundColor: transparent;
   --#{$table}__tr--m-clickable--OutlineOffset: calc(-1 * var(--pf-t--global--spacer--xs));
   --#{$table}__tr--m-clickable--hover--BackgroundColor: var(--pf-t--global--background--color--primary--hover);
-  --#{$table}__tr--m-clickable--focus--BackgroundColor: var(--pf-t--global--background--color--primary--hover);
 
   // tr selected
   --#{$table}__tr--m-selected--BackgroundColor: var(--pf-t--global--background--color--primary--hover);
@@ -217,7 +224,6 @@
   --#{$table}__tbody--m-clickable--BackgroundColor: transparent;
   --#{$table}__tbody--m-clickable--OutlineOffset: calc(-1 * var(--pf-t--global--spacer--xs));
   --#{$table}__tbody--m-clickable--hover--BackgroundColor: var(--pf-t--global--background--color--primary--default);
-  --#{$table}__tbody--m-clickable--focus--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$table}__tbody--m-clickable--m-expanded--BorderColor: var(--pf-t--global--border--color--clicked);
 
   // tbody selected
@@ -287,57 +293,30 @@
       }
     }
 
-  //   thead:where(.#{$table}__thead) tr:where(.#{$table}__tr) {
-  //     // border-block-end: 0;
+    // nested column header
+    > .pf-m-nested-column-header {
+      position: sticky;
+      inset-block-start: 0;
+      z-index: var(--pf-t--global--Zindex--xs);
+      background: var(--#{$table}--BackgroundColor);
 
-  //     > * {
-  //       z-index: var(--#{$table}--m-sticky-header--cell--ZIndex); // set z-index here to allow sticky column to override
-  //     }
-  //   }
+      > .pf-m-border-row {
+        height: var(--#{$table}--border-width--base);
+        background-color: var(--#{$table}--BorderColor);
+      }
 
-  //   // // standard sticky headers
-  //   // > thead:where(.#{$table}__thead):not(.pf-m-nested-column-header) {
-  //   //   > tr:where(.#{$table}__tr) > * {
-  //   //     position: sticky;
-  //   //     inset-block-start: 0;
-  //   //     background: var(--#{$table}--BackgroundColor);
-
-  //   //     // stylelint-disable-next-line
-  //   //     &::after {
-  //   //       position: absolute;
-  //   //       inset-block-end: 0;
-  //   //       inset-inline-start: 0;
-  //   //       inset-inline-end: 0;
-  //   //       content: '';
-  //   //       border-block-end: var(--#{$table}--border-width--base) solid var(--#{$table}--BorderColor);
-  //   //     }
-  //   //   }
-  //   // }
-
-  //   // nested column header
-  //   > .pf-m-nested-column-header {
-  //     position: sticky;
-  //     inset-block-start: 0;
-  //     z-index: var(--pf-t--global--Zindex--xs);
-  //     background: var(--#{$table}--BackgroundColor);
-
-  //     > .pf-m-border-row {
-  //       height: var(--#{$table}--border-width--base);
-  //       background-color: var(--#{$table}--BorderColor);
-  //     }
-
-  //     // tr:where(.#{$table}__tr):not(:nth-last-child(2)) {
-  //     //   // stylelint-disable max-nesting-depth
-  //     //   th:where(.#{$table}__th),
-  //     //   td:where(.#{$table}__td) {
-  //     //     &:not([rowspan]) {
-  //     //       --#{$table}--cell--PaddingBottom: var(--#{$table}__thead--m-nested-column-header__tr--PaddingBottom);
-  //     //     }
-  //     //   }
-  //     //   // stylelint-enable
-  //     // }
-  //   }
-  // }
+      tr:where(.#{$table}__tr):not(:nth-last-child(2)) {
+        // stylelint-disable max-nesting-depth
+        th:where(.#{$table}__th),
+        td:where(.#{$table}__td) {
+          &:not([rowspan]) {
+            --#{$table}--cell--PaddingBottom: var(--#{$table}__thead--m-nested-column-header__tr--PaddingBottom);
+          }
+        }
+        // stylelint-enable
+      }
+    }
+  }
 
   &:not(.pf-m-sticky-header) > .pf-m-nested-column-header {
     tr:where(.#{$table}__tr):not(:last-child) {
@@ -370,6 +349,8 @@
   // Standard table row (non-expandable)
   // exclude expandable rows
   tr:where(.#{$table}__tr):not(.#{$table}__expandable-row) {
+    border-block-end: var(--#{$table}--border-width--base) solid var(--#{$table}--BorderColor);
+
     // stylelint-disable-next-line
     &.pf-m-ghost-row {
       background-color: var(--#{$table}__tr--m-ghost-row--BackgroundColor);
@@ -469,12 +450,6 @@
     &.pf-m-nested-column-header {
       button:where(.#{$button}) {
         outline-offset: var(--#{$table}__thead--m-nested-column-header--button--OutlineOffset);
-      }
-
-      th:where(.#{$table}__th),
-      td:where(.#{$table}__td),
-      input:where(.#{$check}__input) {
-        vertical-align: middle;
       }
 
       tr:where(.#{$table}__tr):not(:first-child) {
@@ -666,19 +641,13 @@
       background-color: var(--#{$table}__tbody--m-clickable--BackgroundColor);
       outline-offset: var(--#{$table}__tbody--m-clickable--OutlineOffset);
 
+
       &.pf-m-expanded:not(.pf-m-selected) {
         --#{$table}__expandable-row--after--BorderColor: var(--#{$table}__tbody--m-clickable--m-expanded--BorderColor);
       }
 
       &:is(:hover, :focus) {
-        --#{$table}__tbody--m-clickable--BoxShadow: var(--#{$table}__tbody--m-clickable--hover--BoxShadow);
         --#{$table}__tbody--m-clickable--BackgroundColor: var(--#{$table}__tbody--m-clickable--hover--BackgroundColor);
-
-        // stylelint-disable max-nesting-depth
-        &:not(.pf-m-selected) + tbody:where(.#{$table}__tbody).pf-m-selected {
-          box-shadow: var(--#{$table}__tbody--m-clickable--m-selected--hover__tr--BoxShadow);
-        }
-        // stylelint-enable
       }
     }
 
@@ -694,75 +663,6 @@
 
   &.pf-m-drag-over {
     overflow-anchor: none;
-  }
-}
-
-// - Table thead
-.#{$table}__thead {
-  .#{$table}__tr {
-    border-block-end: 0;
-  }
-
-  &.pf-m-sticky-header {
-    position: relative;
-
-    thead:where(.#{$table}__thead) tr:where(.#{$table}__tr) {
-      // border-block-end: 0;
-
-      > * {
-        z-index: var(--#{$table}--m-sticky-header--cell--ZIndex); // set z-index here to allow sticky column to override
-      }
-    }
-
-    // // standard sticky headers
-    // > thead:where(.#{$table}__thead):not(.pf-m-nested-column-header) {
-    //   > tr:where(.#{$table}__tr) > * {
-    //     position: sticky;
-    //     inset-block-start: 0;
-    //     background: var(--#{$table}--BackgroundColor);
-
-    //     // stylelint-disable-next-line
-    //     &::after {
-    //       position: absolute;
-    //       inset-block-end: 0;
-    //       inset-inline-start: 0;
-    //       inset-inline-end: 0;
-    //       content: '';
-    //       border-block-end: var(--#{$table}--border-width--base) solid var(--#{$table}--BorderColor);
-    //     }
-    //   }
-    // }
-
-    // nested column header
-    > .pf-m-nested-column-header {
-      position: sticky;
-      inset-block-start: 0;
-      z-index: var(--pf-t--global--Zindex--xs);
-      background: var(--#{$table}--BackgroundColor);
-
-      > .pf-m-border-row {
-        height: var(--#{$table}--border-width--base);
-        background-color: var(--#{$table}--BorderColor);
-      }
-
-      // tr:where(.#{$table}__tr):not(:nth-last-child(2)) {
-      //   // stylelint-disable max-nesting-depth
-      //   th:where(.#{$table}__th),
-      //   td:where(.#{$table}__td) {
-      //     &:not([rowspan]) {
-      //       --#{$table}--cell--PaddingBottom: var(--#{$table}__thead--m-nested-column-header__tr--PaddingBottom);
-      //     }
-      //   }
-      //   // stylelint-enable
-      // }
-    }
-  }
-}
-
-// - Table tbody
-.#{$table}__tbody {
-  .#{$table}__tr {
-    border-block-end: var(--#{$table}--border-width--base) solid var(--#{$table}--BorderColor);
   }
 }
 
@@ -793,9 +693,14 @@
   }
 }
 
-// - Table button
+// Table button
 .#{$table}__button {
   position: static;
+  width: auto;
+  padding-block-start: var(--#{$table}__button--PaddingTop);
+  padding-block-end: var(--#{$table}__button--PaddingBottom);
+  padding-inline-start: var(--#{$table}__button--PaddingLeft);
+  padding-inline-end: var(--#{$table}__button--PaddingRight);
   margin-inline-start: calc(var(--#{$table}__button--PaddingLeft) * -1);
   font-size: inherit;
   font-weight: inherit;
@@ -974,6 +879,7 @@
   --#{$table}__button--hover--Color: var(--#{$table}__compound-expansion-toggle__button--hover--Color);
 
   position: relative;
+  padding: 0;
 
   // show left border, use __text to truncate content
   &.pf-m-truncate {
@@ -981,7 +887,10 @@
   }
 
   .#{$table}__button {
+    position: static;
     min-width: 100%;
+    padding: 0;
+    margin: 0;
     overflow: hidden;
 
     // Remove outline and apply to parent td
@@ -990,22 +899,51 @@
     }
   }
 
+
   // Apply borders to button to avoid conflicts with expanded states
+  .#{$table}__button::before,
   .#{$table}__button::after {
     position: absolute;
     inset: 0;
-    pointer-events: none;
     content: '';
-    border: 0;
+    border-style: solid;
+    border-width: 0;
+  }
+
+  .#{$table}__button::before {
+    inset-block-start: 0;
+    inset-block-end: var(--#{$table}__compound-expansion-toggle__button--before--Bottom);
+    inset-inline-start: var(--#{$table}__compound-expansion-toggle__button--before--Left);
+    border-color: var(--#{$table}__compound-expansion-toggle__button--before--BorderColor);
+    border-inline-start-width: var(--#{$table}__compound-expansion-toggle__button--before--BorderLeftWidth);
+    border-inline-end-width: var(--#{$table}__compound-expansion-toggle__button--before--BorderRightWidth);
+  }
+
+  .#{$table}__button::after {
+    // overlap previous row's border
+    inset-block-start: var(--#{$table}__compound-expansion-toggle__button--after--Top);
+    inset-inline-start: var(--#{$table}__compound-expansion-toggle__button--after--Left);
+    pointer-events: none;
+    border-color: var(--#{$table}__compound-expansion-toggle__button--after--BorderColor);
+    border-block-start-width: var(--#{$table}__compound-expansion-toggle__button--after--BorderTopWidth);
   }
 
   &:hover,
   &:focus-within,
   &.pf-m-expanded {
-    border-block-start-color: var(--#{$table}__compound-expansion-toggle__button--after--BorderColor);
-    border-block-start-width: var(--#{$table}__compound-expansion-toggle__button--after--BorderTopWidth);
-    border-block-start-style: solid;
-  //   --#{$table}__compound-expansion-toggle__button--after--BorderTopWidth: var(--#{$table}__compound-expansion-toggle__button--after--border-width--base);
+    --#{$table}__compound-expansion-toggle__button--before--BorderRightWidth: var(--#{$table}__compound-expansion-toggle__button--before--border-width--base);
+    --#{$table}__compound-expansion-toggle__button--before--BorderLeftWidth: var(--#{$table}__compound-expansion-toggle__button--before--border-width--base);
+    --#{$table}__compound-expansion-toggle__button--after--BorderTopWidth: var(--#{$table}__compound-expansion-toggle__button--after--border-width--base);
+  }
+
+  &.pf-m-expanded {
+    .#{$table}__button::before {
+      border-block-end: var(--#{$table}--BackgroundColor) solid var(--#{$table}__compound-expansion-toggle__button--before--border-width--base);
+    }
+
+    &:first-child {
+      --#{$table}__compound-expansion-toggle__button--before--BorderLeftWidth: 0;
+    }
   }
 
   &:focus-within {
@@ -1082,6 +1020,7 @@
   position: relative;
   border-block-end: 0 solid transparent;
 
+
   &,
   td:where(.#{$table}__td):first-child::after {
     transition: var(--#{$table}__expandable-row--Transition);
@@ -1117,6 +1056,7 @@
   &.pf-m-expanded {
     border-block-end-color: var(--#{$table}__expandable-row--m-expanded--BorderBottomColor);
     border-block-end-width: var(--#{$table}--border-width--base);
+
   }
 
   &:not(.pf-m-expanded) {
