--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -21,14 +21,15 @@
   --#{$text-input-group}--c-chip-group__main--PaddingBottom: var(--pf-t--global--spacer--xs);
 
   // Text input
-  --#{$text-input-group}__text-input--PaddingTop: var(--#{$pf-global}--spacer--form-element);
+  --#{$text-input-group}__text-input--PaddingTop: var(--pf-t--global--spacer--sm);
   --#{$text-input-group}__text-input--PaddingRight: var(--pf-t--global--spacer--sm);
-  --#{$text-input-group}__text-input--PaddingBottom: var(--#{$pf-global}--spacer--form-element);
+  --#{$text-input-group}__text-input--PaddingBottom: var(--pf-t--global--spacer--sm);
   --#{$text-input-group}__text-input--PaddingLeft: var(--pf-t--global--spacer--sm);
   --#{$text-input-group}__text-input--MinWidth: 12ch;
-  --#{$text-input-group}__text-input--m-hint--Color: var(--pf-t--global--text--color--default);
+  --#{$text-input-group}__text-input--m-hint--Color: var(--pf-t--global--text--color--placeholder);
   --#{$text-input-group}__text-input--placeholder--Color: var(--pf-t--global--text--color--placeholder);
   --#{$text-input-group}__text-input--BackgroundColor: transparent;
+  --#{$text-input-group}__text-input--OutlineOffset: -6px;
 
   // Icon
   --#{$text-input-group}__icon--Left: var(--pf-t--global--spacer--sm);
@@ -48,12 +49,18 @@
 .#{$text-input-group} {
   position: relative;
   display: flex;
-  align-items: flex-start;
   width: 100%; // when child of flex layout, take up space
   color: var(--#{$text-input-group}--Color, inherit);
   background-color: var(--#{$text-input-group}--BackgroundColor);
-  border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
-  border-radius: var(--#{$text-input-group}--BorderRadius);
+  
+  &::before {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    content: "";
+    border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
+    border-radius: var(--#{$text-input-group}--BorderRadius);
+  }
 
   &:hover {
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-hover--BorderColor);
@@ -137,6 +144,7 @@
   padding-inline-end: var(--#{$text-input-group}__text-input--PaddingRight);
   background-color: var(--#{$text-input-group}__text-input--BackgroundColor);
   border: 0;
+  outline-offset: var(--#{$text-input-group}__text-input--OutlineOffset);
 
   &,
   &.pf-m-hint {
