--- a/src/patternfly/components/Table/table-tree-view.scss
+++ b/src/patternfly/components/Table/table-tree-view.scss
@@ -9,33 +9,33 @@ $pf-v5-c-tree-view--MaxDepth: 10;
   // * Table tree view main button
   --#{$table}__tree-view-main--c-button--MarginRight: var(--pf-t--global--spacer--sm);
 
-    // main
+  // - Table tree view main
   --#{$table}__tree-view-main--PaddingLeft: var(--#{$table}__tree-view-main--indent--base);
   --#{$table}__tree-view-main--MarginLeft: calc(var(--#{$table}--cell--PaddingLeft) * -1);
 
-  // check
+  // - Table tree view check
   --#{$table}__tree-view-main--c-table__check--PaddingRight: var(--pf-t--global--spacer--sm);
   --#{$table}__tree-view-main--c-table__check--PaddingLeft: var(--pf-t--global--spacer--sm);
   --#{$table}__tree-view-main--c-table__check--MarginRight: var(--pf-t--global--spacer--sm);
 
-  // icon
+  // - Table tree view icon
   --#{$table}__tree-view-icon--MinWidth: var(--pf-t--global--spacer--md);
   --#{$table}__tree-view-icon--MarginRight: var(--pf-t--global--spacer--sm);
 
-  // toggle
+  // - Table tree view toggle
   --#{$table}--m-tree-view__toggle--Position: absolute;
   --#{$table}--m-tree-view__toggle--Left: var(--#{$table}__tree-view-main--PaddingLeft);
   --#{$table}--m-tree-view__toggle--TranslateX: -100%;
 
-  // toggle icon
+  // - Table tree view toggle toggle icon
   --#{$table}--m-tree-view__toggle__toggle-icon--MinWidth: var(--pf-t--global--spacer--md);
 
-  // no node children
+  // - Table tree view no inset tree view main
   --#{$table}--m-no-inset__tree-view-main--PaddingLeft: 0;
   --#{$table}--m-no-inset__tree-view-main--MarginLeft: 0;
 }
 
-// - Table tree view main
+// - Table tree view
 .#{$table}.pf-m-tree-view {
   > tbody > tr {
     --#{$table}--m-tree-view__toggle--Left: var(--#{$table}__tree-view-main--PaddingLeft);
@@ -264,6 +264,7 @@ $pf-v5-c-tree-view--MaxDepth: 10;
     }
   }
 
+  // - Table tree view tr tree view details expanded
   tr:where(.#{$table}__tr).pf-m-tree-view-details-expanded {
     padding-block-end: var(--#{$table}--m-tree-view-grid--m-tree-view-details-expanded--PaddingBottom);
 
@@ -272,15 +273,18 @@ $pf-v5-c-tree-view--MaxDepth: 10;
     }
   }
 
+  // - Table tree view title header cell
   .#{$table}__tree-view-title-header-cell {
     display: block;
   }
 
+  // - Table tree view details toggle - Table tree view action
   .#{$table}__tree-view-details-toggle,
   .#{$table}__action {
     display: inline-block;
   }
 
+  // - Table tree view action
   .#{$table}__action {
     --#{$table}--cell--Width: auto;
     --#{$table}--m-tree-view-grid__tbody--cell--PaddingLeft: var(--#{$table}--m-tree-view-grid--c-table__action--PaddingLeft);
@@ -296,12 +300,14 @@ $pf-v5-c-tree-view--MaxDepth: 10;
     }
   }
 
+  // - Table tree view table check
   .#{$table}__tree-view-main > .#{$table}__check {
     order: var(--#{$table}--m-tree-view-mobile__tree-view-main--c-table__check--Order);
     margin-inline-start: auto;
     margin-inline-end: var(--#{$table}--m-tree-view-mobile__tree-view-main--c-table__check--MarginRight);
   }
 
+  // - Table tree view details toggle
   .#{$table}__tree-view-details-toggle {
     margin-block-start: var(--#{$table}__tree-view-details-toggle--MarginTop);
     margin-block-end: var(--#{$table}__tree-view-details-toggle--MarginBottom);
