fix(v6): merge main

--- a/src/patternfly/components/ModalBox/modal-box.scss
+++ b/src/patternfly/components/ModalBox/modal-box.scss
@@ -106,24 +106,39 @@
     max-height: var(--#{$modal-box}--m-align-top--MaxHeight);
   }
 
-  &.pf-m-danger {
-    --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-danger__title-icon--Color);
+  @at-root .#{$modal-box}__title,
+  & {
+    &.pf-m-danger {
+      --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-danger__title-icon--Color);
+    }
   }
 
-  &.pf-m-warning {
-    --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-warning__title-icon--Color);
+  @at-root .#{$modal-box}__title,
+  & {
+    &.pf-m-warning {
+      --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-warning__title-icon--Color);
+    }
   }
 
-  &.pf-m-success {
-    --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-success__title-icon--Color);
+  @at-root .#{$modal-box}__title,
+  & {
+    &.pf-m-success {
+      --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-success__title-icon--Color);
+    }
   }
 
-  &.pf-m-custom {
-    --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-custom__title-icon--Color);
+  @at-root .#{$modal-box}__title,
+  & {
+    &.pf-m-custom {
+      --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-custom__title-icon--Color);
+    }
   }
 
-  &.pf-m-info {
-    --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-info__title-icon--Color);
+  @at-root .#{$modal-box}__title,
+  & {
+    &.pf-m-info {
+      --#{$modal-box}__title-icon--Color: var(--#{$modal-box}--m-info__title-icon--Color);
+    }
   }
 }
 
