--- a/src/patternfly/components/TextInputGroup/examples/TextInputGroup.css
+++ b/src/patternfly/components/TextInputGroup/examples/TextInputGroup.css
@@ -2,11 +2,12 @@
   position: relative;
 }
 
-.ws-example-wrapper .pf-v5-c-menu,
-.ws-example-wrapper .pf-v5-c-panel {
+.ws-example-wrapper .pf-v6-c-menu,
+.ws-example-wrapper .pf-v6-c-panel {
   position: absolute;
- inset-block-start: 40px;
+  inset-block-start: 40px;
   width: 100%;
+  z-index: var(--pf-t--global--Zindex--2xl);
 }
 
 #ws-core-c-text-input-group-search-input-group-advanced-search-expanded-with-autocomplete {
